--- a/ds/.gitignore
+++ b/ds/.gitignore
@@ -1,2 +1,8 @@
 /MyHashTable$Node.class
 /MyHashTable.class
+/MyBinarySearchTree.class
+/MyBinarySearchTree$Node.class
+/Driver.class
+/MyTRie.class
+/MyTRie$TrieNode.class
+/AmazonGo.class
